# loc2vec

./: .gitignore  .pre-commit-config.yaml  EvaluateModels.ipynb  Evalulate_models.ipynb  Loc2Vec.ipynb  Makefile  README.md  VISUALIZATION_SUMMARY.md  check_cache.py  compress_tiles.py  data_loader.py  embedding_analysis_results.txt  embedding_processor.py  example_similarity_search.py  loc2vec.ipynb  loc2vec_kaggle.ipynb  loc2vec_model_kyiv_region.pth  model.py  model_comparison.py  precompute_embeddings.py  pyproject.toml  run_visualization.sh  setup_similarity_search.py  streamlit_app.py  summary.txt  train.py  visualize_embeddings_tensorboard.py
docker/: docker-compose.yml  note.md
loc2vec/: dataset.py  embeddings.py  inmem_dataset.py  memmap_tiles_dataset.py  metrics.py  model.py  stats.py  train.py
report/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib
saved_models/: Custom Loc2Vec_best_models_summary.txt  EfficientNetV2-S_best_models_summary.txt  MobileNetV3-Small_best_models_summary.txt  best_Custom Loc2Vec_Adam.pth  best_Custom Loc2Vec_AdamW.pth  best_EfficientNetV2-S_Adam.pth  best_EfficientNetV2-S_AdamW.pth  best_MobileNetV3-Small_Adam.pth  best_MobileNetV3-Small_AdamW.pth  comprehensive_comparison_results.csv  comprehensive_comparison_summary.txt  loc2vec_6_layers_model_epoch_1.pth  loc2vec_6_layers_model_epoch_2.pth  loc2vec_6_layers_model_epoch_3.pth  loc2vec_6_layers_model_epoch_4.pth  loc2vec_6_layers_model_epoch_5.pth  loc2vec_model_epoch_1.pth  loc2vec_model_epoch_2.pth  loc2vec_model_kyiv_region.pth
src/: main.py  model.py  osm_data.py  prepare_osm_data.py  train_osm.py  visualize_osm.py
tiles/: PreviewTilesDataset.ipynb  PreviewTilesDataset_6l.ipynb  create_6l_dataset_memmap.py  create_dataset_memmap.py  generate_index.py  generate_tiles.py  utils.py
web_app_data/: metadata.json  summary.json
(+19 files in other folders)
