[project]
name = "loc2vec"
version = "0.1.0"
description = "Project for ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "shapely>=2.0.7",
    "torch>=2.6.0",
    "torchvision>=0.17.0",
    "scikit-learn>=1.4.0",
    "tensorboard>=2.16.0",
    "requests>=2.31.0",
    "folium>=0.15.0",
    "pillow>=10.0.0",
    "plotly>=6.0.1",
    "dash>=3.0.4",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
    "pandas-stubs==2.2.3.250527",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
